# speck-it-mcp-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  quickstart.md  regression_test.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
lib/: __init__.py  speckit.py
src/: __init__.py  models.py  speckit_logging.py  workflow.py  workspace.py
test/: project-test.txt
tests/contract/: test_requirement_001.py
tests/integration/: test_requirement_001_integration.py
tests/unit/: test_logging.py  test_models.py  test_workflow.py  test_workspace.py
